--- a/data/dialog/Makefile.am
+++ b/data/dialog/Makefile.am
@@ -2,7 +2,9 @@ pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
 pkgdata_DATA = asc2_dlg.zip
 
-asc2_dlg.zip: asc2_dlg.theme
+asc2_dlg.zip: asc2_dlg.theme asc/*.bmp asc/*.ttf asc/*.png
 	chmod -R g-w asc*
 	chmod -R o-w asc*
 	(zip -9 -r asc2_dlg.zip asc_dlg.theme asc2_dlg.theme ./asc/* -i *.png *.bmp *.ttf *.theme)
+
+CLEANFILES = asc2_dlg.zip 
