--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -53,9 +53,9 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/ogg.dll"
   File "@inst_win32_DLL_dir@/SDL_mixer.dll"
   File "@inst_win32_DLL_dir@/smpeg.dll"
-  File "@inst_win32_DLL_dir@/zlib.dll"
+  File "@inst_win32_DLL_dir@/zlib1.dll"
   File "@inst_win32_DLL_dir@/expat.dll"
-  File "@inst_win32_DLL_dir@/libpng1.dll"
+  File "@inst_win32_DLL_dir@/libpng13.dll"
   File "@inst_win32_DLL_dir@/sdl.dll"
   File "@inst_win32_DLL_dir@/vorbis.dll"
   File "@inst_win32_DLL_dir@/in_flac.dll"
@@ -69,7 +69,7 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/msvcp71d.dll"
 
   ; Data Files
-  File "../data/dialog/asc_dlg.zip"
+  File "../data/dialog/asc2_dlg.zip"
   File "../data/units/MK1/mk1.con"
   File "../data/units/MK3/units-mk3.con"
   File "../data/main.con"
@@ -126,7 +126,7 @@ Section "Tools"
    File "@inst_win32_build_dir@/weaponguide.exe"
    File "@inst_win32_build_dir@/demount.exe"
    File "@inst_win32_build_dir@/mount.exe"
-   File "@inst_win32_build_dir@/makegfx.exe"
+ ;  File "@inst_win32_build_dir@/makegfx.exe"
 SectionEnd
 
 ;--------------------------------
