--- a/source/graphics/Makefile.am
+++ b/source/graphics/Makefile.am
@@ -8,3 +8,4 @@ noinst_LTLIBRARIES 	= libgraphics.la
 libgraphics_la_SOURCES	= surface.cpp blitter.cpp drawing.cpp surface2png.cpp
 libgraphics_la_LIBADD		= @SDL_LIBS@ 
 
+INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
