--- a/source/libs/paragui/src/widgets/Makefile.am
+++ b/source/libs/paragui/src/widgets/Makefile.am
@@ -18,7 +18,7 @@ INCLUDES = \
 	$(SIGC_CFLAGS) \
 	$(EXPAT_INCLUDE) \
 	$(SDL_CFLAGS) \
-	-I$(top_srcdir)/include
+	-I$(top_srcdir)/source/libs/paragui/include
 
 style_cvs:
 	astyle --style=kr --indent=tab=4 --indent-switches *.cpp
