--- a/source/libs/paragui/src/ystring/Makefile.am
+++ b/source/libs/paragui/src/ystring/Makefile.am
@@ -8,7 +8,7 @@ EXTRA_DIST =
 
 INCLUDES = \
 	$(SDL_CFLAGS) \
-	-I$(top_srcdir)/include
+	-I$(top_srcdir)/source/libs/paragui/include
 
 style_cvs:
 	astyle --style=kr --indent=tab=4 --indent-switches *.cpp
