--- a/data/dialog/Makefile.in
+++ b/data/dialog/Makefile.in
@@ -15,11 +15,9 @@
 @SET_MAKE@
 
 srcdir = @srcdir@
-top_srcdir = @top_srcdir@
 VPATH = @srcdir@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
-top_builddir = ../..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
 INSTALL = @INSTALL@
 install_sh_DATA = $(install_sh) -c -m 644
@@ -57,7 +55,9 @@ am__installdirs = "$(DESTDIR)$(pkgdatadir)"
 pkgdataDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(pkgdata_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
+top_srcdir = @top_srcdir@
 pkgdatadir = $(datadir)/games/@PACKAGE@
+top_builddir = @top_builddir@
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
@@ -203,6 +203,7 @@ subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 pkgdata_DATA = asc2_dlg.zip
+CLEANFILES = asc2_dlg.zip 
 all: all-am
 
 .SUFFIXES:
@@ -320,6 +321,7 @@ install-strip:
 mostlyclean-generic:
 
 clean-generic:
+	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
@@ -384,7 +386,7 @@ uninstall-am: uninstall-info-am uninstall-pkgdataDATA
 	uninstall uninstall-am uninstall-info-am uninstall-pkgdataDATA
 
 
-asc2_dlg.zip: asc2_dlg.theme
+asc2_dlg.zip: asc2_dlg.theme asc/*.bmp asc/*.ttf asc/*.png
 	chmod -R g-w asc*
 	chmod -R o-w asc*
 	(zip -9 -r asc2_dlg.zip asc_dlg.theme asc2_dlg.theme ./asc/* -i *.png *.bmp *.ttf *.theme)
