--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -1,6 +1,8 @@
 
 MAINTAINERCLEANFILES    = Makefile.in
 
+INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
+
 AM_CXXFLAGS             = $(SDL_CFLAGS) $(SIGC_CFLAGS) 
 
 noinst_LTLIBRARIES      = libdialogs.la libgamedialogs.la libmapeddialogs.la
