--- a/source/libs/paragui/src/draw/Makefile.am
+++ b/source/libs/paragui/src/draw/Makefile.am
@@ -16,7 +16,7 @@ EXTRA_DIST =
 INCLUDES = \
 	$(SDL_CFLAGS) \
 	$(SIGC_CFLAGS) \
-	-I$(top_srcdir)/include
+	-I$(top_srcdir)/source/libs/paragui/include
 
 style_cvs:
 	astyle --style=kr --indent=tab=4 --indent-switches *.cpp
