--- a/source/libs/paragui/src/font/Makefile.am
+++ b/source/libs/paragui/src/font/Makefile.am
@@ -10,7 +10,7 @@ EXTRA_DIST = \
 INCLUDES = \
 	$(SIGC_CFLAGS) \
 	$(SDL_CFLAGS) \
-	-I$(top_srcdir)/include
+	-I$(top_srcdir)/source/libs/paragui/include
 
 style_cvs:
 	astyle --style=kr --indent=tab=4 --indent-switches *.cpp
