--- a/source/libs/paragui/src/themes/Makefile.in
+++ b/source/libs/paragui/src/themes/Makefile.in
@@ -15,12 +15,10 @@
 @SET_MAKE@
 
 srcdir = @srcdir@
-top_srcdir = @top_srcdir@
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
-top_builddir = ../../../../..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
 INSTALL = @INSTALL@
 install_sh_DATA = $(install_sh) -c -m 644
@@ -66,6 +64,8 @@ DIST_SOURCES = $(libtheme_la_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
+top_srcdir = @top_srcdir@
+top_builddir = @top_builddir@
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
@@ -219,7 +219,7 @@ INCLUDES = \
 	$(SIGC_CFLAGS) \
 	$(EXPAT_INCLUDE) \
 	$(SDL_CFLAGS) \
-	-I$(top_srcdir)/include
+	-I$(top_srcdir)/source/libs/paragui/include
 
 EXTRA_DIST = \
 	theme_priv.h
