--- a/source/libs/sdl_sound/Makefile.in
+++ b/source/libs/sdl_sound/Makefile.in
@@ -15,12 +15,10 @@
 @SET_MAKE@
 
 srcdir = @srcdir@
-top_srcdir = @top_srcdir@
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
-top_builddir = ../../..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
 INSTALL = @INSTALL@
 install_sh_DATA = $(install_sh) -c -m 644
@@ -66,6 +64,8 @@ DIST_SOURCES = $(libSDL_sound_int_la_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
+top_srcdir = @top_srcdir@
+top_builddir = @top_builddir@
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
@@ -210,7 +210,7 @@ sharedstatedir = @sharedstatedir@
 subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-INCLUDE = -I$(top_builddir) -I$(top_src_dir)
+INCLUDE = -I$(top_src_dir)
 noinst_LTLIBRARIES = libSDL_sound_int.la
 AM_CFLAGS = -DSOUND_SUPPORTS_OGG  $(SDL_CFLAGS) $(VORBIS_CFLAGS)
 libSDL_sound_int_la_SOURCES = ogg.c SDL_sound.c audio_convert.c
