--- a/source/libs/sdlmm/src/Makefile.am
+++ b/source/libs/sdlmm/src/Makefile.am
@@ -1,7 +1,4 @@
-## Makefile.am for the SDLmm library
-
-
-INCLUDE			= -I$(top_builddir) -I$(top_src_dir)
+INCLUDE			= -I$(top_src_dir)
 
 noinst_LTLIBRARIES	= libSDLmm.la
 
@@ -16,7 +13,3 @@ libSDLmm_la_SOURCES = sdlmm_global.cpp sdlmm_basesurface.cpp sdlmm_surface.cpp s
 	sdlmm_srect.cpp sdlmm_event.cpp sdlmm_audio.cpp sdlmm_timer.cpp \
 	sdlmm_joystick.cpp sdlmm_cd.cpp sdlmm_videoinfo.cpp
 	
-#libSDLmm_la_LDFLAGS = 		\
-#        -release $(LT_RELEASE)	\
-#	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
-
