--- a/source/libs/sdlmm/src/Makefile.in
+++ b/source/libs/sdlmm/src/Makefile.in
@@ -15,12 +15,10 @@
 @SET_MAKE@
 
 srcdir = @srcdir@
-top_srcdir = @top_srcdir@
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
-top_builddir = ../../../..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
 INSTALL = @INSTALL@
 install_sh_DATA = $(install_sh) -c -m 644
@@ -69,6 +67,8 @@ DIST_SOURCES = $(libSDLmm_la_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
+top_srcdir = @top_srcdir@
+top_builddir = @top_builddir@
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
@@ -213,7 +213,7 @@ sharedstatedir = @sharedstatedir@
 subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-INCLUDE = -I$(top_builddir) -I$(top_src_dir)
+INCLUDE = -I$(top_src_dir)
 noinst_LTLIBRARIES = libSDLmm.la
 AM_CXXFLAGS = @SDL_CFLAGS@ 
 AM_CFLAGS = @SDL_CFLAGS@ 
@@ -486,10 +486,6 @@ uninstall-am: uninstall-info-am
 	pdf pdf-am ps ps-am tags uninstall uninstall-am \
 	uninstall-info-am
 
-
-#libSDLmm_la_LDFLAGS = 		\
-#        -release $(LT_RELEASE)	\
-#	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
