--- a/source/libs/triangul/Makefile.am
+++ b/source/libs/triangul/Makefile.am
@@ -1,13 +1,10 @@
 
 MAINTAINERCLEANFILES	= Makefile.in
 
-INCLUDE			= -I$(top_builddir) -I$(top_src_dir)
+INCLUDE			=  -I$(top_src_dir)
 
 noinst_LTLIBRARIES	= libtriangul.la
 
 EXTRA_DIST		= construc.c monotone.c tri.c trimisc.c
 
 libtriangul_la_SOURCES	= trimisc.c tri.c monotone.c construc.c
-
-####### kdevelop will overwrite this part!!! (begin)##########
-####### kdevelop will overwrite this part!!! (end)############
