--- a/source/widgets/Makefile.in
+++ b/source/widgets/Makefile.in
@@ -15,12 +15,10 @@
 @SET_MAKE@
 
 srcdir = @srcdir@
-top_srcdir = @top_srcdir@
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
-top_builddir = ../..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
 INSTALL = @INSTALL@
 install_sh_DATA = $(install_sh) -c -m 644
@@ -68,6 +66,8 @@ DIST_SOURCES = $(libwidgets_la_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
+top_srcdir = @top_srcdir@
+top_builddir = @top_builddir@
 ACLOCAL = @ACLOCAL@
 AMDEP_FALSE = @AMDEP_FALSE@
 AMDEP_TRUE = @AMDEP_TRUE@
@@ -217,6 +217,7 @@ AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)
 noinst_LTLIBRARIES = libwidgets.la 
 libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp targetcoordinatelocator.cpp 
 libwidgets_la_LIBADD = @SDL_LIBS@
+INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
 all: all-am
 
 .SUFFIXES:
